--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
 @import "tailwindcss";
 
+/* @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap");
+
+html {
+  font-family: "Nunito Sans", sans-serif;
+} */
+
 /* :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
